Fix policy recommendations pages' header overlap on fixed menu

--- a/app/assets/stylesheets/refinery/recommendation.scss
+++ b/app/assets/stylesheets/refinery/recommendation.scss
@@ -74,8 +74,8 @@
     background-color: $v3-color_beige;
     display: flex;
     font-family: $font_family-primary;
-    margin: -10rem;
-    padding: 3rem 15rem;
+    margin: 0 -40rem -10rem;
+    padding: 3rem 45rem;
 
     div {
       width: 60%;
